fixed alignment and content justification of header, altered h1 and h2 colors added video link

--- a/Landing.css
+++ b/Landing.css
@@ -8,6 +8,7 @@
     --color-white: #f0f0f0;
     --color-orange: #f35626;
     --color-yellow: #feab3a;
+    --color-rose: #e73c7ed3;
 }
 
 body {
@@ -19,6 +20,7 @@ body {
 .logo {
     display:flex;
     flex-direction: row;
+    align-items: flex-end;
     border: 1px solid;
     border-color: var(--color-white);
     background-color: var(--color-transparent-black);
@@ -32,9 +34,20 @@ body {
 
 h1 {
     margin: 0px;
-    padding: 0 2rem 2rem 5px;
+    padding-left: 5px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.5em;
+    font-weight: 200;
+    letter-spacing: 1px;
+    color: var(--color-white);
+}
+
+h2 {
+    margin: 0px;
+    text-align: center;
+    padding-top: 3rem;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 2.2em;
+    font-size: 3em;
     font-weight: 200;
     letter-spacing: 1px;
     color: var(--color-orange);
@@ -55,8 +68,7 @@ h1 {
 
 #nav-bar {
     flex-grow: 1;
-    justify-content: flex-end;
-
+    align-self: center;
 }
 
 a {
@@ -66,15 +78,15 @@ a {
 }
  
 ul {
-    display: inline-flex;
+    display: flex;
+    justify-content: flex-end;
     margin: 0;
-    padding-right: 2rem;
     list-style: none;
 }
 
 li {
     font-size: 1.25em;
-    padding: 0.75rem 1rem 0 1rem;
+    padding: 0 1rem 0 1rem;
     color: var(--color-white);
 }
 
